--- a/package.json
+++ b/package.json
@@ -17,12 +17,18 @@
   "author": "hhz",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "font-awesome": "^4.7.0",
     "gl": "^4.3.3",
     "jsdom": "^15.1.1",
     "pngjs": "^3.4.0",
     "react": "^16.8.6",
+    "react-chunk": "^7.3.0",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.1",
     "three": "^0.104.0"
   },
   "devDependencies": {
