--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
