--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "fabric": "^3.1.0",
     "font-awesome": "^4.7.0",
     "gl": "^4.3.3",
     "jsdom": "^15.1.1",
