--- a/package.json
+++ b/package.json
@@ -24,20 +24,24 @@
     "jsdom": "^15.1.1",
     "pngjs": "^3.4.0",
     "react": "^16.8.6",
-    "react-chunk": "^7.3.0",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "three": "^0.104.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.0.15",
     "clean-webpack-plugin": "^2.0.2",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
@@ -46,6 +50,8 @@
     "less-loader": "^5.0.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
