--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "copy-webpack-plugin": "^5.0.3",
     "fabric": "^3.1.0",
     "font-awesome": "^4.7.0",
     "gl": "^4.3.3",
@@ -30,7 +31,8 @@
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "three": "^0.104.0"
+    "three": "^0.104.0",
+    "three-obj-loader": "^1.1.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
