--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "three": "^0.104.0",
-    "three-obj-loader": "^1.1.3"
+    "three-obj-loader": "^1.1.3",
+    "three-orbit-controls": "^82.1.0",
+    "three-orbitcontrols": "^2.102.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
